evms/parser.c
/*
 *
 *   (C) Copyright IBM Corp. 2001, 2003
 *
 *   This program is free software;  you can redistribute it and/or modify
 *   it under the terms of the GNU General Public License as published by
 *   the Free Software Foundation; either version 2 of the License, or
 *   (at your option) any later version.
 *
 *   This program is distributed in the hope that it will be useful,
 *   but WITHOUT ANY WARRANTY;  without even the implied warranty of
 *   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See
 *   the GNU General Public License for more details.
 *
 *   You should have received a copy of the GNU General Public License
 *   along with this program;  if not, write to the Free Software
 *   Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 *
 * Module: parser.c
 *
 * Authors:
 *  Original Author : B. Rafanello
 */

/*
 *
 */

/* Identify this file. */
#define PARSER_C

/*--------------------------------------------------
 * Necessary include files
 --------------------------------------------------*/

#include <ctype.h>		/* toupper */
#include <stdlib.h>		/* malloc */
#include <string.h>		/* malloc */
#include "token.h"		/* TokenType, Token, MaxIdentifierLength */
#include "scanner.h"
#include "screener.h"		/* GetScreenedToken , and all of the predefined strings for keywords. */
#include "dlist.h"
#include "error.h"
/* include "evms_appAPI.h" */
#include "parser.h"


/*--------------------------------------------------
 * Private constants
 --------------------------------------------------*/
#define HANDLE_TAG  39392

/*--------------------------------------------------
 * Private types
 --------------------------------------------------*/
typedef enum {
    Try_Again,
    Error,
    Token_Accepted
} Parse_Results;

typedef unsigned long Available_Generic_Filters;	/* This is a bitmap with one bit for each of the available generic filters. The Bit defintions follow: */
#define  Available_Filter      (1<<0)
#define  Container_Filter      (1<<1)
#define  Convertible_Filter    (1<<2)
#define  Expandable_Filter     (1<<3)
#define  EQ_Filter             (1<<4)
#define  GT_Filter             (1<<5)
#define  LT_Filter             (1<<6)
#define  LO_Filter             (1<<7)
#define  Object_Filter         (1<<8)
#define  Plugin_Filter         (1<<9)
#define  Region_Filter         (1<<10)
#define  Segment_Filter        (1<<11)
#define  Shrinkable_Filter     (1<<12)
#define  Unclaimed_Filter      (1<<13)
#define  Volume_Filter         (1<<14)
#define  Plugin_Type_Filter    (1<<15)
#define  Disk_Filter           (1<<16)
#define  Freespace_Filter      (1<<17)


/*--------------------------------------------------
 * Private variables
 --------------------------------------------------*/
static TokenType *Current_Token = NULL;	/* Token being parsed. */
static boolean Use_Current_Token = FALSE;	/* Used to have the current token processed again. */
static TokenType Null_Token = { EofToken, 0, 0, 0, NULL, TRUE };	/* Used to represent an empty token. */
static char *Command_Filename = NULL;	/* Name of command file, if any, being parsed. */
static dlist_t Tokens = NULL;	/* Tokens being stored during when lookahead is in operation. */
static uint LookAhead_Active = 0;	/* Used to indicate whether or not Look Ahead is active for parsing. */
static dlist_t Lookahead_Handles = NULL;	/* Used to hold the handles of tokens to return to in the Tokens list. */

/*--------------------------------------------------
 * Private functions
 --------------------------------------------------*/

/* Set up token handling functions so that if we need to go to a lookahead scheme, it won't
   affect any existing code.                                                                 */
static void Consume_Token(void);	/* Frees the current token and sets CurrentToken to NULL. */
static void Next_Token(void);	/* Gets the next token to be parsed and sets CurrentToken to point to it. */
static Executable_Node *Activate_Lookahead(void);	/* Start Lookahead mode. */
static boolean Restore_Current_Token(Executable_Node * Temp_Node);	/* Restores Current_Token to the value it was at before any Lookahead calls were made. */
static boolean Terminate_Lookahead(Executable_Node * Current_Node, Executable_Node * Temp_Node, boolean Keep_Children);	/* End lookahead mode. */
static void Assign_Text(Executable_Node * Node, TokenType * Token);	/* Moves Token->Token_Text to Node->Node_Value taking into account whether or not
									   the Token is in the Lookahead buffer (i.e. the Tokens list. )                   */

/* Private Utility Functions */
static void Free_Command_List(dlist_t Command_List);	/* Deletes all entries in the Command_List and frees their memory. */
static boolean Kill_Command_List_Entries(ADDRESS Object, TAG ObjectTag, ADDRESS ObjectHandle, ADDRESS Parameters, boolean * FreeMemory, uint * Error);	/* Used with the PruneList function to delete entries in the Command_List. */

static boolean Kill_Tokens_List_Entries(ADDRESS Object,
					TAG ObjectTag,
					ADDRESS ObjectHandle,
					ADDRESS Parameters,
					boolean * FreeMemory,
					uint * Error);


/* Private functions corresponding to non-terminals in the grammar. */
static Parse_Results Command(Executable_Node * Current_Node,
			     boolean Optional);
static Parse_Results Allocation_Parameters(Executable_Node * Current_Node,
					   boolean Optional);
static Parse_Results Assign_Parameters(Executable_Node * Current_Node,
				       boolean Optional);
static Parse_Results Add_Feature_Parameters(Executable_Node * Current_Node,
					    boolean Optional);
static Parse_Results Creation_Parameters(Executable_Node * Current_Node,
					 boolean Optional);
static Parse_Results Check_For_Compatibility_Keyword(Executable_Node *
						     Current_Node,
						     boolean Optional);
static Parse_Results Expand_Shrink_Task_Parameters(Executable_Node *
						   Current_Node,
						   boolean Optional);
static Parse_Results Format_Parameters(Executable_Node * Current_Node,
				       boolean Optional);
static Parse_Results Set_Parameters(Executable_Node * Current_Node,
				    NodeTypes Node_To_Create,
				    boolean Optional);
static Parse_Results Check_Parameters(Executable_Node * Current_Node,
				      boolean Optional);
static Parse_Results Mount_Parameters(Executable_Node * Current_Node,
				      boolean Optional);
static Parse_Results Query_Type(Executable_Node * Current_Node,
				boolean Optional);
static Parse_Results Plugin_Types(Executable_Node * Current_Node,
				  boolean Optional);
static Parse_Results Help_Type(Executable_Node * Current_Node,
			       boolean Optional);
static Parse_Results Commit_Type(Executable_Node * Current_Node,
				 boolean Optional);
static Parse_Results Feature_Identifier(Executable_Node * Current_Node,
					boolean Optional,
					boolean Parameters_Follow,
					boolean Objects_Are_Optional);
static Parse_Results Plugin_Identifier(Executable_Node * Current_Node,
				       boolean Parameters_Follow,
				       boolean Get_Object_List,
				       boolean Optional);
static Parse_Results Specify_Object(Executable_Node * Current_Node,
				    NodeTypes Node_To_Create,
				    boolean Optional);
static Parse_Results Size(Executable_Node * Current_Node,
			  boolean Optional);
static Parse_Results Precision(Executable_Node * Current_Node,
			       boolean Optional);
static Parse_Results Accept_Name(Executable_Node * Current_Node, boolean Name_Optional);	/* Used for Name = "string" */
static Parse_Results Name(Executable_Node * Current_Node, boolean Field_Name, boolean Optional);	/* Used for Name = Value pairs */
static Parse_Results Get_String(Executable_Node * Current_Node,
				boolean AcceptNumberAsString,
				boolean Optional);
static Parse_Results Parse_Name_Value_Pair(Executable_Node * Current_Node,
					   boolean Optional);
static Parse_Results Value(Executable_Node * Current_Node,
			   boolean Optional);
static Parse_Results Parse_Object_List(Executable_Node * Current_Node,
				       boolean Optional);
static Parse_Results Parse_Query_Acceptable_Parameters(Executable_Node *
						       Current_Node,
						       boolean Optional);
static Parse_Results Parse_Query_Acceptable_Create(Executable_Node *
						   Current_Node,
						   boolean Optional);
static Parse_Results Parse_Query_Extended_Info_Parameters(Executable_Node *
							  Current_Node,
							  boolean
							  Optional);
static Parse_Results Parse_Units(Executable_Node * Current_Node,
				 boolean Allow_Time_Units,
				 boolean Optional);
static Parse_Results Parse_Filters(Executable_Node * Current_Node,
				   Available_Generic_Filters
				   Filters_Allowed,
				   Available_Generic_Filters *
				   Filters_In_Use, boolean Optional);
static Parse_Results Parse_Optional_Query_Filters(Executable_Node *
						  Current_Node,
						  Available_Generic_Filters
						  Allowed_Filters,
						  boolean Optional);
static Parse_Results Check_For_Colon(boolean Optional);
static Parse_Results Check_For_Comma(boolean Comma_Is_Optional);
static Parse_Results Check_For_EqualSign(boolean EqualSign_Is_Optional);
static Parse_Results Check_For_Open_Brace(boolean Optional);
static Parse_Results Check_For_Closing_Brace(boolean Optional);
static Parse_Results Check_For_Open_Paren(boolean Optional);
static Parse_Results Check_For_Closing_Paren(boolean Optional);
static Executable_Node *Make_Child_Node(Executable_Node * Current_Node,
					boolean Add_To_Current_Node);



/*--------------------------------------------------
 * Public Functions
 --------------------------------------------------*/

dlist_t Parse_Command_Line(void)
{
    Parse_Results Command_Found = FALSE;	/* Used to hold the return value from lower level parsing functions. */
    dlist_t Command_List = NULL;	/* List of commands parsed thus far. */
    Executable_Node *Current_Node = NULL;	/* The node used to represent the current command being parsed. */
    ADDRESS Unneeded;		/* Used as a parameter for parameters we don't care about. */

    /* Clear out the lookahead system in case a previous command failed while lookahead was active. */
    LookAhead_Active = 0;
    if (Tokens != NULL) {

	/* Remove any left over tokens from the Tokens list. */
	if (PruneList(Tokens, &Kill_Tokens_List_Entries, NULL) !=
	    DLIST_SUCCESS) {
	    Report_Parser_Error(Internal_Error_Encountered, NULL, NULL);
	    return NULL;
	}

	/* Now destroy the Tokens list. */
	if (DestroyList(&Tokens, FALSE) != DLIST_SUCCESS) {
	    Report_Parser_Error(Internal_Error_Encountered, NULL, NULL);
	    return NULL;
	}


    }

    if (Lookahead_Handles != NULL) {

	/* Clear any handles from the handles list. */
	if (DestroyList(&Lookahead_Handles, TRUE)) {
	    Report_Parser_Error(Internal_Error_Encountered, NULL, NULL);
	    return NULL;
	}

    }

    /* Create the dlist_t we are to return. */
    Command_List = CreateList();
    if (Command_List == NULL) {

	Report_Parser_Error(Out_Of_Memory, NULL, NULL);

	return NULL;

    }

    /* Begin parsing! */

    /* Get the first token. */
    Next_Token();

    /* We will loop until we are out of tokens. */
    while ((Current_Token != NULL) &&
	   (Current_Token->Characterization != EofToken) &&
	   (Current_Token->Characterization != InvalidCharacter)) {

	/* We must create a command node. */
	Current_Node = Make_Child_Node(NULL, FALSE);
	if (Current_Node == NULL) {
	    Report_Parser_Error(Out_Of_Memory, NULL, NULL);

	    Free_Command_List(Command_List);
	    Command_List = NULL;

	    return NULL;

	}

	/* Check for EOF or InvalidCharacter */
	if ((Current_Token == NULL)
	    || (Current_Token->Characterization == EofToken)
	    || (Current_Token->Characterization == InvalidCharacter)) {
	    Report_Parser_Error(Expecting_Command_Start, Command_Filename,
				Current_Token);

	    /* Free the Current_Node. */
	    DestroyList(&Current_Node->Children, TRUE);
	    free(Current_Node);
	    Current_Node = NULL;

	    /* We must free all of the nodes in the Command_List. */
	    Free_Command_List(Command_List);
	    Command_List = NULL;

	    break;
	}

	Command_Found = Command(Current_Node, FALSE);	/* Attempt to parse a command. */

	/* We should have a complete command.  Put the command into the Command_List.
	   If the command is not complete, when the Command_List is destroyed using the Free_Command_List
	   function, then the node we just added to the command list will be disposed of also.             */
	if (InsertObject
	    (Command_List, Current_Node, STACK_NODE, NULL, AppendToList,
	     TRUE, &Unneeded) != DLIST_SUCCESS) {
	    /* We must be out of memory! */
	    Report_Parser_Error(Out_Of_Memory, NULL, NULL);

	    /* Free the Current_Node. */
	    DestroyList(&Current_Node->Children, TRUE);
	    free(Current_Node);
	    Current_Node = NULL;

	    Free_Command_List(Command_List);
	    Command_List = NULL;

	    break;

	}

	/* Did we successfully parse a command? */
	if (Command_Found != Token_Accepted) {
	    /* No commands were recognized or an error occurred. */
	    if (Command_Found == Try_Again)
		Report_Parser_Error(Expecting_Command_Name, NULL,
				    Current_Token);

	    /* Any error should have been reported by whoever found it. */

	    /* Free any commands in the Command_List. */
	    Free_Command_List(Command_List);
	    Command_List = NULL;

	    break;

	}

	/* Since we completed this command, lets look for another. */

	/* Get the next token. */
	Next_Token();

	/* Are we done? */
	if ((Current_Token == NULL)
	    || (Current_Token->Characterization == EofToken)) {
	    Consume_Token();
	    break;
	}

	/* Check for InvalidCharacter */
	if (Current_Token->Characterization == InvalidCharacter) {

	    Report_Parser_Error(Expecting_Command_Separator,
				Command_Filename, Current_Token);

	    /* We must free all of the nodes in the Command_List. */
	    Free_Command_List(Command_List);
	    Command_List = NULL;

	    break;

	}

	/* Check for the command separator - the ':' */
	if ((Current_Token->Characterization != Separator) ||
	    (Current_Token->TokenText[0] != ':')) {

	    Report_Parser_Error(Expecting_Command_Separator,
				Command_Filename, Current_Token);

	    /* We must free all of the nodes in the Command_List. */
	    Free_Command_List(Command_List);
	    Command_List = NULL;

	    break;

	}

	/* We have a command separator.  Consume the token and start the while loop again. */
	Consume_Token();
	Next_Token();

    }				/* while */

    return Command_List;

}


/*******************************************************************
 *  Private Functions
 *******************************************************************/

static Parse_Results
Command(Executable_Node * Current_Node, boolean Optional)
{

    Executable_Node *Temp_Node = NULL;	/* Used for lookahead operations. */
    Parse_Results Return_Value;	/* Used to track the return value from lower level parsing functions. */
    boolean ASM_Found = FALSE;	/* Used when parsing Add Segment Manager. */
    boolean AF_Found = FALSE;	/* Used when parsing Add Feature. */

    /* At this point, we know that '-' or '--' has been encountered.
       Also, we know that Current_Token has been loaded for us and
       has already been checked for NULL, EOF, and InvalidCharacter
       tokens.  We also know that Current_Node has been allocated
       but its fields have not yet been initialized.                 */

    /* A command is always a KeyWord. */
    if (Current_Token->Characterization != KeyWord) {
	if (Optional)
	    return Try_Again;
	else {
	    Report_Parser_Error(Expecting_Command_Name, NULL,
				Current_Token);
	    return Error;
	}

    }

    /* Which command do we have? */
    switch (Current_Token->TokenText[0]) {
    case 'A':			/* Activate, Add Feature, Allocate, Assign, Add Segment Manager */

	/* Do we have an activate command? */
	if ((Current_Token->TokenText == ActivateStr)
	    || (Current_Token->TokenText == ActStr)) {

	    /* Mark Current_Node as being an Activate command. */
	    Current_Node->NodeType = Activate_Node;

	    /* We have an activate command. Let's consume the token, check for the
	       colon which should follow the activate keyword, and then call
	       the Specify_Object function.                                */
	    Consume_Token();

	    Return_Value = Check_For_Colon(Optional);
	    if (Return_Value != Token_Accepted)
		return Return_Value;

	    return Specify_Object(Current_Node, Translate_Name_To_Handle,
				  Optional);

	}

	ASM_Found = FALSE;
	AF_Found = FALSE;

	/* Do we have Add Feature or Add Segment Manager? */
	if (Current_Token->TokenText == AddStr) {

	    /* Check for the Feature or Segment keywords. */
	    Consume_Token();
	    Next_Token();

	    if ((Current_Token != NULL) &&
		(Current_Token->Characterization == KeyWord) &&
		(Current_Token->TokenText == FeatureStr))
		AF_Found = TRUE;
	    else if ((Current_Token != NULL) &&
		     (Current_Token->Characterization == KeyWord) &&
		     (Current_Token->TokenText == SegmentStr)) {

		/* Check for the Manager keyword. */
		Consume_Token();
		Next_Token();

		if ((Current_Token != NULL) &&
		    (Current_Token->Characterization == KeyWord) &&
		    (Current_Token->TokenText == ManagerStr))
		    ASM_Found = TRUE;
		else {

		    if (Optional)
			return Try_Again;

		    Report_Parser_Error(Expecting_Manager_Keyword,
					Command_Filename, Current_Token);

		    return Error;

		}

	    } else {

		if (Optional)
		    return Try_Again;

		Report_Parser_Error(Expecting_Feature_Or_Segment_Keyword,
				    Command_Filename, Current_Token);

		return Error;

	    }

	}

	/* Do we have an Add Feature command? */
	if (AF_Found || (Current_Token->TokenText == AFStr)) {

	    /* Mark Current_Node as being an Add Feature command. */
	    Current_Node->NodeType = Add_Feature_Node;

	    /* We have an Add Feature command. Lets consume the token, check for the
	       colon which should follow the Feature keyword. */
	    Consume_Token();

	    Return_Value = Check_For_Colon(Optional);
	    if (Return_Value != Token_Accepted)
		return Return_Value;

	    return Add_Feature_Parameters(Current_Node, Optional);

	}

	/* Do we have an allocate command? */
	if ((Current_Token->TokenText == AllocateStr) ||
	    (Current_Token->TokenLength == 1)) {

	    /* Mark Current_Node as being an Allocate command. */
	    Current_Node->NodeType = Allocate_Node;

	    /* We have an allocate command. Lets consume the token, check for the
	       colon which should follow the allocate keyword, and then call
	       the Allocation_Parameters function.                                */
	    Consume_Token();

	    Return_Value = Check_For_Colon(Optional);
	    if (Return_Value != Token_Accepted)
		return Return_Value;

	    return Allocation_Parameters(Current_Node, Optional);

	}

	/* Do we have an assign command? */
	if ((Current_Token->TokenText == AssignStr)
	    || (Current_Token->TokenText == AsmStr) || ASM_Found) {

	    /* Mark Current_Node as being an Assign command. */
	    Current_Node->NodeType = Assign_Node;
